@@ -171,7 +171,7 @@ public class TipUIUtil {
         String path = img.substring(srcIndex + 5, endIndex);
         URL url;
         try {
-          url = tipLoader != null ? ResourceUtil.getResource(tipLoader, "/tips/", path) : new URL("file://" + FileUtil.join(tipPath, path));
+          url = tipLoader != null ? ResourceUtil.getResource(tipLoader, "/tips/", path) : new File(tipPath, path).toURI().toURL();
         }
         catch (MalformedURLException e) {
           url = null;
